# ohjelmistotekniikka-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  dbcreatetest.db  investmentdb.db  logintest.db  pyproject.toml  tasks.py  test.db
dokumentaatio/: arkkitehtuuri.md  kayttohje.md  maarittely.md  testausdokumentti.md
harjoitustyo/dokumentaatio/: maarittely.md
harjoitustyo/tyoaikakirjanpito/: tyoaika.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: create_db.py  db_mgmt.py  index.py  investmentdb.db  login.py  register.py
src/data_service/: login.py  plan_service.py  register.py
src/investment_plan_logic/: plan_mgmt.py
src/logic/: investment_costs.py  investment_plan.py  investment_revenue.py  plan_mgmt.py  session_info.py
src/tests/: dbCreation_test.py  db_mgmt_test.py  investment_costs_test.py  investment_plan_test.py  investment_revenue_test.py  login_test.py  plan_mgmt_test.py  plan_service_test.py  registration_test.py  session_test.py
src/ui/: investment_ui.py  login_ui.py  menu_ui.py  new_plan_ui.py  ui.py
src/user_mgmt/: login.py  register.py  session_info.py
tyoaikakirjanpito/: tyoaika.md
