[tool.poetry]
name = "ot"
version = "0.1.0"
description = ""
authors = ["MyVeli <veli.myllyla@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
invoke = "^1.5.0"
pandas = "^1.1.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
importlib-metadata = "^3.10.1"
typing-extensions = "^3.7.4"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
